--- a/css/estilo_altaU.css
+++ b/css/estilo_altaU.css
@@ -2,8 +2,9 @@
 .contenedor{
     width: 40%;
     margin: 0 auto;
-    margin-top:80px;;
+    margin-top:80px;
 }
-h3{
-    text-align: center;
+
+body{
+    background-image: url("../img/noticias.jpg"); 
 }
